[tool.poetry]
name = "cipher_yjw2106"
version = "0.1.0"
description = "Cipher yjw2106"
authors = ["yjw224 <yjw224@nyu.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.semantic_release]
version_variable = "cipher_yj2106/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"